# fase4-auth-service

./: .gitignore  Dockerfile  README.md  build-and-push.sh  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build-test-sonar-push.yml
deploy/terraform/: _terraform.tf  app-alb.tf  app-data.tf  app-ecr.tf  app-log.tf  app-role.tf  app-service.tf  app-sg.tf  dynamodb.tf  jwt-key.tf  secrets.tf  variables.tf
source/: main.py
source/configs/: secrets.py  services.py  settings.py
source/depends/: app.py  jwt_provider.py  jwt_signer.py  repository.py  settings.py
source/dtos/: auth.py
source/helpers/: aws.py  jwt.py  repository.py  settings.py
source/models/: user.py
source/routes/: auth.py  root.py
source/schemas/request/: auth.py
source/schemas/response/: auth.py
source/usecase/: auth.py
tests/: conftest.py  test_auth_endpoint.py  test_auth_flow.py  test_aws_helper.py  test_configs.py  test_depends.py  test_jwt_helper.py  test_models.py  test_register_endpoint.py  test_root_routes.py  test_schemas.py  test_usecase.py
