[project]
name = "fase4-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi>=0.122.0",
    "jwcrypto>=1.5.6",
    "orjson>=3.11.4",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "testcontainers>=4.0.0",
    "cryptography>=42.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
addopts = [
    "--cache-clear",
    "--junitxml=reports/report.xml",
    "--cov=source",
    "--cov-report=xml:reports/coverage.xml",
    "--cov-report=term",
]
